# mballet

server/: Cargo.toml
server/migrations/2022-08-05-184343_create_post/: up.sql
server/migrations/2022-08-23-155026_create_posts/: down.sql  up.sql
server/migrations/2022-08-23-174437_create_users/: up.sql
server/migrations/2022-08-26-161619_confirmations/: down.sql  up.sql
server/migrations/2022-09-07-113825_bookings/: up.sql
server/migrations/2022-09-16-152735_orders/: up.sql
server/migrations/2022-10-19-132837_ballet_classes/: down.sql  up.sql
server/migrations/2022-10-20-113845_bookings/: down.sql  up.sql
server/migrations/2022-10-21-152735_orders/: down.sql  up.sql
server/migrations/2022-10-24-142443_order_details/: down.sql  up.sql
server/src/: auth.rs  db.rs  error_handler.rs  main.rs  schema.rs
server/src/ballet_classes/: api.rs  mod.rs  model.rs  routes.rs
server/src/bookings/: api.rs  mod.rs  model.rs  payment_utils.rs  routes.rs
server/src/order_details/: api.rs  model.rs
server/src/orders/: api.rs  mod.rs  model.rs  payment_utils.rs  routes.rs
server/src/posts/: model.rs  routes.rs  utils.rs
server/src/users/: auth_utils.rs  email_service.rs  mod.rs  model.rs  register_handler.rs  routes.rs
web/: next.config.js  package.json  tailwind.config.js  types.d.ts
web/atoms/: deleteModalAtom.ts  editModalAtom.ts
web/components/: AboutUs.tsx  AddFile.tsx  AuthForm.tsx  AuthenticationForm.tsx  ClassItem.tsx  ClassesTrending.tsx  Confirmation.tsx  CreateBooking.tsx  CreatePost.tsx  CreatePostForm.tsx  DeleteModal.tsx  EditPostModal.tsx  (+16 more)
(+86 files in other folders)
