[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
actix-cors = "0.6.2"
actix-rt = "1.0"
actix-web-httpauth = "0.8.0"
actix-session = {version = "0.7.2", features = ["redis-actor-session"]}
actix-redis = {version = "0.12.0"}
alcoholic_jwt = "4091.0.0"
argonautica = "0.2.0"
lettre = "0.10.1"
native-tls = "0.2"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.11"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.6"
lazy_static = "1.4"
listenfd = "0.3"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_qs = "0.10"
r2d2 = "0.8"
uuid = { version = "0.6", features = ["serde", "v4"] }
validator = { version = "0.12", features = ["derive"] }
log = "0.4.17"
futures = "0.3.24"